<resources>
    <string name="app_name">Moments</string>
    <string name="password">Password..</string>
    <string name="email_hint">Email..</string>
    <string name="moments">Moments</string>
    <string name="welcome">Welcome To</string>
    <string name="login_button">Log In to Account</string>
    <string name="new_account_button">Need A New Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="create_new_account">Create A New Account</string>
    <string name="reg_new_account">Create New Account</string>
    <string name="reg_have_account">Already have A Account?</string>
    <string name="confirm_pass">Confirm Password</string>
</resources>
